# Tmuxer

./: CODE_OF_CONDUCT.md  README.md  bun.lockb  package.json
docs/: CONTRIBUTING.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  ns_panel.rs  tmux.rs  util.rs
src-tauri/src/terminal/: alacritty.scpt  iterm.scpt  kitty.scpt  mod.rs  terminal.scpt
src/components/Actions/: index.tsx
src/components/CustomButton/: index.tsx
src/components/CustomIconButton/: index.tsx
src/components/CustomInput/: index.tsx
src/components/Icons/: CommandIcon.tsx  ReturnIcon.tsx  SettingsIcon.tsx  TerminalIcon.tsx  TmuxerLogo.tsx  WindowIcon.tsx
src/components/SearchInput/: index.tsx
src/components/Session/: index.tsx
src/components/SessionButton/: index.tsx
src/components/Sessions/: index.tsx
src/components/TitleBar/: index.tsx
src/contexts/: session.context.tsx  update.context.tsx
src/routes/Dashboard/: index.tsx
src/routes/Dashboard/routes/: routes.tsx
src/routes/Dashboard/routes/Settings/: index.tsx
src/routes/Search/: index.tsx
src/types/: Session.types.tsx
src/utils/: colors.ts  utils.ts  window.ts
