[package]
name = "tmuxer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "window-minimize", "window-maximize", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-close", "window-create", "fs-read-dir", "fs-read-file", "fs-write-file", "global-shortcut-all", "macos-private-api", "path-all", "system-tray", "window-center", "window-hide", "window-set-focus", "window-set-size", "window-set-skip-taskbar", "window-show"] }
directories = "4.0.1"
auto-launch = "0.4.0"
window-vibrancy = "0.3.2"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "^0.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = {version = "0.23.1"}
core-foundation = { version = "0.9.3" }
cocoa = { version = "0.25.0" }
objc =  { version = "0.2.7" }
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
